# relaxator

./: README.md  com.github.alexkdeveloper.relaxator.json  meson.build  snapcraft.yaml
.github/workflows/: main.yml
data/: com.github.alexkdeveloper.relaxator.appdata.xml.in  com.github.alexkdeveloper.relaxator.desktop.in  com.github.alexkdeveloper.relaxator.gresource.xml  com.github.alexkdeveloper.relaxator.gschema.xml  meson.build
src/: Application.vala  Bus.vala  Window.vala
